--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>My portfolio</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" type="text/css" href="style/normalize.css">
-    <link rel="stylesheet" type="text/css" href="style/stylesheet.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="images/stylesheet.css">
+  	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script> 
 </head>
 
 <body>
