Изменено расположение элементов на странице, исправлен блок контента

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
         <div class="main_content">
             <!-- Шапка -->
             <header class="header">
-                <div class="logo">
-                    <a href=" ">
+                <div class="cont_big">
+                    <a class="logo" href=" ">
                         <img src="images/logo.png" alt="LoftSchool">
                         <span class="hide_text">Сайт портфолио</span>
                     </a>
-                </div>
-                <div class="social">
-                    <ul class="list_link">
+                    <ul class="social">
                         <li class="item_links">
                             <a href="https://vk.com/id_callobock" class="sprite sprite-icon-vk"><div class="hide_text">Вконтакте</div></a>
                         </li>
@@ -38,26 +36,25 @@
                             <a href="https://github.com/CallOBock/MyWP1" class="sprite sprite-icon-git"><div class="hide_text">GitHub</div></a>
                         </li>
                     </ul>
+                    <div class="gradient"></div>
                 </div>
-                <div class="gradient"></div>
             </header>
             <!-- /Шапка -->
             <!-- Сайд-бар с блоком контента -->
-            <div class="container">
+            <div class="container clearfix">
                 <!-- Левые блоки -->
                 <aside class="sidebar">
                     <!-- Навигация -->
                     <nav class="navigation">
                         <ul class="navigation_list">
-                            <li class="author">
-                                <a href="http://yandex.ru"> Обо мне </a>
+                            <li class="navigation_item active">
+                                <a class="navigation_link" href="#"> Обо мне </a>
                             </li>
-                            <li class="mywork">
-                                <a href="#"> Мои работы	</a>
-                                <div class="line"></div>
+                            <li class="navigation_item">
+                                <a class="navigation_link" href="#"> Мои работы	</a>
                             </li>
-                            <li class="connectWithMe">
-                                <a href="#"> Связаться со мной </a>
+                            <li class="navigation_item">
+                                <a class="navigation_link" href="#"> Связаться со мной </a>
                             </li>
                         </ul>
                     </nav>
@@ -105,7 +102,7 @@
                             </div>
                             <div class="image_wrap">
                                 <div class="avatar_box">
-                                    <img src="images/icon-face.png" class="avatar" alt="photo">
+                                    <img src="images/Homer.png" class="avatar" alt="photo">
                                 </div> 
                             </div>
                             <div class="infAboutMe">
@@ -157,6 +154,7 @@
                                     <div class="where">"ООО Системы безопасности" - Системный администратор</div>
                                     <div class="when">Июнь 2008 - Июль 2010</div>
                                 </li>
+                                                                               
     <!--                             <li>
                                     <div class="sprite sprite-icon-portfolio"></div>
                                     <div>
